--- a/Noise/Noise/Presentation/Base.lproj/Main.storyboard
+++ b/Noise/Noise/Presentation/Base.lproj/Main.storyboard
@@ -80,7 +80,6 @@
                                                                             </constraints>
                                                                         </imageView>
                                                                     </subviews>
-                                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <constraints>
                                                                         <constraint firstItem="dQq-69-iWH" firstAttribute="leading" secondItem="wU9-1o-Zu1" secondAttribute="leading" id="8w2-MJ-uSh"/>
                                                                         <constraint firstItem="A1j-We-bby" firstAttribute="leading" secondItem="IAs-Bt-wWU" secondAttribute="trailing" constant="10" id="ER6-0f-ca6"/>
@@ -114,6 +113,8 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="albumImageView" destination="B1t-aw-fDN" id="q0j-lq-r8V"/>
+                                            <outlet property="maxSliderImageView" destination="A1j-We-bby" id="62W-x0-40Q"/>
+                                            <outlet property="minSliderImageView" destination="dQq-69-iWH" id="95c-9Z-gFW"/>
                                             <outlet property="slider" destination="IAs-Bt-wWU" id="pPS-So-n3X"/>
                                             <outlet property="soundSubtitleLabel" destination="axE-jZ-cFX" id="ahr-FG-RC3"/>
                                             <outlet property="soundTitleLabel" destination="333-zw-OeG" id="Kq4-q1-etj"/>
@@ -342,7 +343,6 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="95.5" height="95.5"/>
                                                         </imageView>
                                                     </subviews>
-                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="trailing" secondItem="85s-PU-V97" secondAttribute="trailing" id="Pad-kG-zjo"/>
                                                         <constraint firstItem="85s-PU-V97" firstAttribute="top" secondItem="IeC-O0-UwX" secondAttribute="top" id="UhM-nK-apK"/>
@@ -372,7 +372,7 @@
                                             <outlet property="customLabel" destination="Vob-is-1Wl" id="aqa-Eb-Z0k"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MixtapeTableViewCell" rowHeight="120" id="WLg-ah-URZ" customClass="MixtapeTableViewCell" customModule="Noise" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MixtapeTableViewCell" focusStyle="custom" rowHeight="120" id="WLg-ah-URZ" customClass="MixtapeTableViewCell" customModule="Noise" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="148" width="375" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="WLg-ah-URZ" id="r3W-cd-xjb">
@@ -389,7 +389,6 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="95.5" height="95.5"/>
                                                         </imageView>
                                                     </subviews>
-                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="trailing" secondItem="VqN-gI-qYz" secondAttribute="trailing" id="2YX-mC-w48"/>
                                                         <constraint firstItem="bCe-r5-lDd" firstAttribute="top" secondItem="Jta-YY-coa" secondAttribute="top" id="6Xw-pl-41q"/>
@@ -619,7 +618,7 @@
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add Sound" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UW3-uY-9Hw">
                                                     <rect key="frame" x="45" y="19.5" width="305" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -703,7 +702,6 @@
                                                                             </constraints>
                                                                         </imageView>
                                                                     </subviews>
-                                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="bottom" secondItem="oRf-IM-UY0" secondAttribute="bottom" id="6yA-RO-2zC"/>
                                                                         <constraint firstItem="KNT-07-mfX" firstAttribute="leading" secondItem="oRf-IM-UY0" secondAttribute="trailing" constant="10" id="OTc-iC-0B6"/>
@@ -737,6 +735,8 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="albumImageView" destination="EC6-9S-Srx" id="1iY-tw-ts4"/>
+                                            <outlet property="maxSliderImageView" destination="KNT-07-mfX" id="eak-rp-Ug0"/>
+                                            <outlet property="minSliderImageView" destination="gjO-GU-jPW" id="HdM-bA-Mjx"/>
                                             <outlet property="slider" destination="oRf-IM-UY0" id="IP0-e1-Q1n"/>
                                             <outlet property="soundSubtitleLabel" destination="xyz-u5-Ox9" id="vEL-lK-IUn"/>
                                             <outlet property="soundTitleLabel" destination="XRE-tC-7Zy" id="NTN-oP-e98"/>
@@ -929,7 +929,7 @@
         <scene sceneID="RQG-xH-xzx">
             <objects>
                 <tableViewController id="qlR-ty-DOb" customClass="SettingsViewController" customModule="Noise" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="static" style="plain" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" contentViewInsetsToSafeArea="NO" id="dRq-wl-6mi">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="static" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" contentViewInsetsToSafeArea="NO" id="dRq-wl-6mi">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
