--- a/Noise/Noise/Presentation/Base.lproj/Main.storyboard
+++ b/Noise/Noise/Presentation/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="5uO-Z0-kYL">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="3Li-DE-tTZ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -290,10 +290,28 @@
             </objects>
             <point key="canvasLocation" x="1917.5999999999999" y="131.78410794602701"/>
         </scene>
+        <!--Splash Screen View Controller-->
+        <scene sceneID="9AA-RR-f9z">
+            <objects>
+                <viewController id="3Li-DE-tTZ" customClass="SplashScreenViewController" customModule="Noise" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="UvB-gM-76F">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="4AC-dL-5V1"/>
+                    </view>
+                    <connections>
+                        <segue destination="5uO-Z0-kYL" kind="presentation" identifier="presentMainApp" modalTransitionStyle="crossDissolve" id="BZK-qj-wY3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="d4E-9c-Wkq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-828" y="132.68365817091455"/>
+        </scene>
         <!--Base Tab Bar Controller-->
         <scene sceneID="abC-pe-NIE">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="5uO-Z0-kYL" customClass="BaseTabBarController" customModule="Noise" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="BaseTabBarController" automaticallyAdjustsScrollViewInsets="NO" id="5uO-Z0-kYL" customClass="BaseTabBarController" customModule="Noise" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="aUn-qh-kKo">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
