--- a/Noise/Noise/Presentation/Base.lproj/LaunchScreen.storyboard
+++ b/Noise/Noise/Presentation/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,11 +14,42 @@
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
+                    <view key="view" contentMode="scaleToFill" id="c6q-8G-m8Z">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder_artwork" translatesAutoresizingMaskIntoConstraints="NO" id="JRz-RT-AFv">
+                                <rect key="frame" x="30" y="184.5" width="131.5" height="131.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="JRz-RT-AFv" secondAttribute="height" multiplier="1:1" id="No0-26-GvB"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Noise" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fqy-Wa-dZz">
+                                <rect key="frame" x="46" y="311" width="111" height="50.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="42"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create personalized ambient sounds for relaxing, meditation and better sleeping " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8ao-N1-0Ox">
+                                <rect key="frame" x="46" y="366.5" width="283" height="61"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="8ao-N1-0Ox" secondAttribute="trailing" constant="46" id="7zs-N4-WkS"/>
+                            <constraint firstItem="Fqy-Wa-dZz" firstAttribute="top" secondItem="JRz-RT-AFv" secondAttribute="bottom" constant="-5" id="Gl6-1V-KZ5"/>
+                            <constraint firstItem="Fqy-Wa-dZz" firstAttribute="leading" secondItem="CdZ-dc-eIR" secondAttribute="leading" constant="46" id="LqG-qa-8oC"/>
+                            <constraint firstItem="CdZ-dc-eIR" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Fqy-Wa-dZz" secondAttribute="trailing" symbolic="YES" id="YGW-ED-1qU"/>
+                            <constraint firstItem="JRz-RT-AFv" firstAttribute="leading" secondItem="CdZ-dc-eIR" secondAttribute="leading" constant="30" id="YaV-q7-t4Y"/>
+                            <constraint firstItem="8ao-N1-0Ox" firstAttribute="leading" secondItem="CdZ-dc-eIR" secondAttribute="leading" constant="46" id="gIf-oU-YyO"/>
+                            <constraint firstItem="JRz-RT-AFv" firstAttribute="centerY" secondItem="c6q-8G-m8Z" secondAttribute="centerY" multiplier="0.75" id="ic8-vP-uig"/>
+                            <constraint firstItem="8ao-N1-0Ox" firstAttribute="top" secondItem="Fqy-Wa-dZz" secondAttribute="bottom" constant="5" id="pvZ-4x-iWr"/>
+                            <constraint firstItem="JRz-RT-AFv" firstAttribute="width" secondItem="c6q-8G-m8Z" secondAttribute="width" multiplier="0.35" id="qZe-It-fWe"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="CdZ-dc-eIR"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -22,4 +57,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="placeholder_artwork" width="512" height="512"/>
+    </resources>
 </document>
